// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders correctly authenticated 1`] = `
.c10 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c10:hover {
  opacity: 0.90;
}

.c10:focus {
  outline: none;
}

.c10:active {
  opacity: 0.80;
}

.c10:disabled {
  background-color: #3E3E3E;
}

.c10:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c12 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  left: 0px;
  right: 0px;
  bottom: 32px;
  z-index: 2;
}

.c5 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c8 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  background: #F8F8F8;
  color: #1B1B1B;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid #4D02EE;
}

.c7 {
  width: 100%;
}

.c11 {
  width: 100%;
}

.c13 {
  margin-top: 16px;
  width: 100%;
}

.c1 {
  height: 100%;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: grid;
  justify-items: center;
  -webkit-column-gap: 50px;
  column-gap: 50px;
  height: 90%;
  max-height: 650px;
  margin: 100px;
  grid-template-rows: [heading] 1fr [title] 1fr [content] 4fr;
  grid-template-columns: [img] 1fr [content] 1fr;
}

.c4 {
  grid-row: title;
  grid-column: content;
  color: #02A3EE;
}

.c6 {
  width: 100%;
  max-width: 400px;
  height: 350px;
  grid-row: content;
  grid-column: content;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  grid-column: img;
  grid-row: 2 / 4;
  width: 75%;
  max-width: 800px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  height: 100%;
  width: 100%;
}

@media (max-width:47.9375em) {
  .c2 {
    grid-template-columns: [content] 1fr;
    grid-template-rows: [title] 1fr [content] 4fr [footer] 1fr;
    margin: 20px 20px 0px 20px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    box-shadow: none;
    background-color: #181818;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    grid-column: 1;
    grid-row: footer;
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <img
          className="c3"
          src={[Function]}
        />
        <h1
          className="c4"
        >
          Change your password
        </h1>
        <div
          className="c5 c6"
        >
          <form
            className="c7"
            onSubmit={[Function]}
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="oldPassword"
                onChange={[Function]}
                placeholder="Current password"
                type="password"
                value=""
              />
            </div>
            <div
              className="c8"
            >
              <input
                className="c9"
                name="password"
                onChange={[Function]}
                placeholder="New password"
                type="password"
                value=""
              />
            </div>
            <div
              className="c8"
            >
              <input
                className="c9"
                name="passwordConfirm"
                onChange={[Function]}
                placeholder="Confirm new password"
                type="password"
                value=""
              />
            </div>
            <button
              className="c10 c11"
              disabled={true}
            >
              Change password
            </button>
            <button
              className="c10 c12 c13"
              id="logoutButton"
              onClick={[Function]}
            >
              Cancel and logout
            </button>
          </form>
        </div>
      </div>
    </div>
    <span
      className="c14"
    />
  </div>
</div>
`;

exports[`app renders correctly authenticated and password changed 1`] = `
.c9 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c9:hover {
  opacity: 0.90;
}

.c9:focus {
  outline: none;
}

.c9:active {
  opacity: 0.80;
}

.c9:disabled {
  background-color: #3E3E3E;
}

.c9:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c10 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
}

.c7:hover {
  opacity: 0.90;
}

.c3 {
  cursor: pointer;
}

.c1 {
  padding: 16px;
  background-color: #1B1B1B;
  display: grid;
  grid-template-columns: [logo] 100px [content] 1fr;
  grid-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 1;
}

.c5 {
  grid-column: content;
  display: grid;
  grid-template-columns: [menu] 1fr [new-agent] 250px [logout] 100px;
  grid-gap: 12px;
  height: auto;
}

.c4 {
  grid-row: logo;
  grid-column: toggle;
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  line-height: 32px;
  text-align: center;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform .3s ease-out;
  -webkit-transition: transform .3s ease-out;
  transition: transform .3s ease-out;
}

.c4:hover {
  cursor: pointer;
}

.c8 {
  margin: 0px 16px;
  float: left;
}

.c6 {
  grid-column: menu;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2 {
  grid-column: logo;
}

.c11 {
  grid-column: logout;
  float: right;
  max-width: 100px;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  left: 0px;
  right: 0px;
  bottom: 32px;
  z-index: 2;
}

.c15 {
  margin-left: 8px;
}

.c13 {
  display: grid;
  grid-template-rows: [header] 50px [list] 1fr;
  max-width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 16px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  grid-row: header;
}

.c16 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

.c12 {
  display: grid;
  grid-template-columns: [agent-listing] 1fr 1fr;
  grid-template-rows: 1fr;
  margin: 25px;
}

.c0 {
  height: 100%;
  width: 100%;
}

@media (max-width:47.9375em) {
  .c1 {
    grid-template-columns: [main] 1fr [toggle] 24px;
    grid-template-rows: [logo] 50px [content] 1fr;
    position: static;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: auto;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    display: none;
    grid-column: main / -1;
    grid-row: content;
    height: 100%;
    grid-template-columns: [main] 1fr;
    grid-template-rows: [menu] 1fr [new-agent] 50px [logout] 50px;
  }
}

@media (max-width:47.9375em) {
  .c4 {
    display: inline;
  }
}

@media (max-width:47.9375em) {
  .c8 {
    width: 100%;
    margin-bottom: 32px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    -webkit-align-self: start;
    -ms-flex-item-align: start;
    align-self: start;
    grid-column: main;
    grid-row: menu;
    margin-top: 32px;
  }
}

@media (max-width:47.9375em) {
  .c2 {
    grid-column: main;
    grid-row: logo;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    grid-column: main;
    grid-row: logout;
    max-width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c15 {
    display: none;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    grid-template-columns: [agent-listing] 1fr;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Apollo
      </div>
      <i
        className="c3 c4 fa fa-bars fa-lg"
        id="collapseIcon"
        onClick={[Function]}
      />
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <a
            className="c7 c8"
            href="/"
            onClick={[Function]}
          >
            Dashboard
          </a>
        </div>
        <button
          className="c9 c10 c11"
          id="logoutButton"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
    <div>
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <h2>
              Agents
            </h2>
            <button
              className="c9 c10"
              onClick={[Function]}
            >
              <i
                className="fas fa-plus"
              />
              <span
                className="c15"
              >
                Add new agent
              </span>
            </button>
          </div>
          <ul
            className="c16"
          />
        </div>
      </div>
    </div>
    <span
      className="c17"
    />
  </div>
</div>
`;

exports[`app renders correctly unauthenticated 1`] = `
.c10 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c10:hover {
  opacity: 0.90;
}

.c10:focus {
  outline: none;
}

.c10:active {
  opacity: 0.80;
}

.c10:disabled {
  background-color: #3E3E3E;
}

.c10:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  left: 0px;
  right: 0px;
  bottom: 32px;
  z-index: 2;
}

.c5 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c8 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  background: #F8F8F8;
  color: #1B1B1B;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid #4D02EE;
}

.c7 {
  height: 75%;
  display: grid;
  grid-template-rows: auto;
  grid-row-gap: 40px;
}

.c1 {
  height: 100%;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: grid;
  justify-items: center;
  -webkit-column-gap: 50px;
  column-gap: 50px;
  height: 90%;
  max-height: 650px;
  margin: 100px;
  grid-template-rows: [heading] 1fr [title] 1fr [content] 4fr;
  grid-template-columns: [img] 1fr [content] 1fr;
}

.c4 {
  grid-row: title;
  grid-column: content;
  color: #02A3EE;
}

.c6 {
  width: 100%;
  max-width: 400px;
  height: 350px;
  grid-row: content;
  grid-column: content;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  grid-column: img;
  grid-row: 2 / 4;
  width: 75%;
  max-width: 800px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  height: 100%;
  width: 100%;
}

@media (max-width:47.9375em) {
  .c2 {
    grid-template-columns: [content] 1fr;
    grid-template-rows: [title] 1fr [content] 4fr [footer] 1fr;
    margin: 20px 20px 0px 20px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    box-shadow: none;
    background-color: #181818;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    grid-column: 1;
    grid-row: footer;
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <img
          className="c3"
          src={[Function]}
        />
        <h1
          className="c4"
        >
          Log in to Apollo
        </h1>
        <div
          className="c5 c6"
        >
          <form
            className="c7"
            onSubmit={[Function]}
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="username"
                onChange={[Function]}
                placeholder="Username"
                type="username"
                value=""
              />
            </div>
            <div
              className="c8"
            >
              <input
                className="c9"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <button
              className="c10"
            >
              Log in
            </button>
          </form>
        </div>
      </div>
    </div>
    <span
      className="c11"
    />
  </div>
</div>
`;
